--- a/src/config/_settings-variables.scss
+++ b/src/config/_settings-variables.scss
@@ -4,5 +4,5 @@
 $font-size-base: 16;
 $font-size-html: unquote('#{$font-size-base}px');
 
-$padding-base: 16;
-$margin-base: 16;
+$space-base: 16;
+
