--- a/src/theming.scss
+++ b/src/theming.scss
@@ -1,7 +1,9 @@
-@import './settings-variables';
-@import './functions';
-@import './mixins';
-@import './typography-settings';
-@import './modules/index';
-@import './material-theme-setup';
+@import './config/settings-variables';
+@import './config/functions';
+@import './config/mixins';
+@import './config/typography-settings';
+@import './normalize/_normalize';
+@import './modules/layout';
+@import './modules/skin';
+@import './config/material-theme-setup';
 
